@@ -1,3 +1,9 @@
+2023-11-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/RcppExports.cpp: Regenerated with updated Rcpp to avoid an
+	issue triggered by -Wformat-security warning under R-devel
+	* R/RcppExports.R: Idem
+
 2023-10-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
